--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <span class="text-gray-400">$</span>
                 <input type="text" id="input" class="bg-transparent border-none outline-none text-white w-full ml-2" autofocus autocomplete="off">
             </div>
+            <ul id="suggestions" class="bg-gray-800 text-white text-sm rounded-md mt-1 hidden"></ul>
         </div>
     </div>
     <script src="script.js"></script>
