--- a/index.html
+++ b/index.html
@@ -7,24 +7,42 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white font-mono">
-    <div id="app" class="flex items-center justify-center h-screen">
+    <div id="app" class="flex flex-col items-center justify-center h-screen">
         <div class="terminal-container bg-black border border-gray-800 rounded-lg shadow-lg p-4 w-full max-w-4xl">
             <div class="terminal-header flex justify-between items-center bg-gray-800 p-2 rounded-t-lg">
-                <div class="flex space-x-2">
-                    <div class="h-4 w-4 rounded-full bg-red-500"></div>
-                    <div class="h-4 w-4 rounded-full bg-yellow-500"></div>
-                    <div class="h-4 w-4 rounded-full bg-green-500"></div>
-                </div>
                 <p class="text-sm text-gray-400">WebTerminal</p>
+                <button id="settings-toggle" class="text-sm text-gray-400 hover:text-white">⚙ Settings</button>
             </div>
             <div class="terminal-body overflow-y-auto h-96 p-2">
-                <pre id="output" class="text-sm text-green-400">Welcome to WebTerminal! Type "help" for a list of commands.</pre>
+                <pre id="output" class="text-sm text-green-400 terminal-output">Welcome to WebTerminal! Type "help" for a list of commands.</pre>
             </div>
             <div class="terminal-input flex items-center mt-2">
                 <span class="text-gray-400">$</span>
                 <input type="text" id="input" class="bg-transparent border-none outline-none text-white w-full ml-2" autofocus autocomplete="off">
             </div>
-            <ul id="suggestions" class="bg-gray-800 text-white text-sm rounded-md mt-1 hidden"></ul>
+        </div>
+
+        <!-- Settings Modal -->
+        <div id="settings-modal" class="hidden fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center z-50">
+            <div class="bg-white text-black rounded-lg shadow-lg p-6 w-96">
+                <h2 class="text-lg font-bold mb-4">Settings</h2>
+                <label class="block mb-2">
+                    <span class="text-gray-700">Font Size:</span>
+                    <select id="font-size" class="w-full mt-1 p-2 border rounded">
+                        <option value="small">Small</option>
+                        <option value="medium" selected>Medium</option>
+                        <option value="large">Large</option>
+                    </select>
+                </label>
+                <label class="block mb-2">
+                    <span class="text-gray-700">Background Color:</span>
+                    <select id="background-color" class="w-full mt-1 p-2 border rounded">
+                        <option value="dark" selected>Dark</option>
+                        <option value="light">Light</option>
+                    </select>
+                </label>
+                <button id="close-settings" class="mt-4 bg-gray-800 text-white py-2 px-4 rounded">Close</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
