--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
             <div class="terminal-body overflow-y-auto h-96 p-2">
                 <pre id="output" class="text-sm text-green-400 terminal-output">Welcome to WebTerminal! Type "help" for a list of commands.</pre>
             </div>
-            <div class="terminal-input flex items-center mt-2">
-                <span class="text-gray-400">$</span>
-                <input type="text" id="input" class="bg-transparent border-none outline-none text-white w-full ml-2" autofocus autocomplete="off">
+            <div class="terminal-input flex flex-col mt-2">
+                <div class="flex items-center">
+                    <span class="text-gray-400">$</span>
+                    <input type="text" id="input" class="bg-transparent border-none outline-none text-white w-full ml-2" autofocus autocomplete="off">
+                </div>
+                <ul id="suggestions" class="bg-gray-800 text-white text-sm rounded-md mt-1 hidden"></ul>
             </div>
         </div>
 
